erDiagram
    RES_PARTNER ||--o{ SHRIMP_API_KEY : "partner_id"
    RES_PARTNER ||--o{ SHRIMP_CHARGE : "seller_partner_id, buyer_partner_id"
    RES_PARTNER ||--o{ SHRIMP_CHECK_REQUEST : "seller_partner_id, buyer_partner_id"
    RES_PARTNER ||--o{ SHRIMP_LOT_ALLOCATION : "partner_id"
    RES_PARTNER ||--o{ SHRIMP_PARTNER_FACILITY : "partner_id"
    RES_PARTNER ||--o{ SHRIMP_PARTNER_POND : "partner_id"
    RES_PARTNER ||--o{ SHRIMP_PRODUCT : "seller_partner_id"
    RES_PARTNER ||--o{ SHRIMP_REVIEW : "seller_partner_id, reviewer_partner_id"
    RES_PARTNER ||--o{ SHRIMP_STOCK_LOT : "owner_id"
    RES_PARTNER ||--o{ SHRIMP_STOCK_MOVE : "source_partner_id, dest_partner_id"
    RES_PARTNER ||--o{ SHRIMP_TRANSACTION : "seller_partner_id, buyer_partner_id"
    RES_PARTNER ||--o{ SHRIMP_USER_CERTIFICATE_LINE : "partner_id"
    SHRIMP_CERTIFICATE ||--o{ SHRIMP_PRODUCT_CERTIFICATE_LINE : "certificate_id"
    SHRIMP_CERTIFICATE ||--o{ SHRIMP_USER_CERTIFICATE_LINE : "certificate_id"
    SHRIMP_GENETICS_LINE ||--o{ SHRIMP_PRODUCT : "genetics_line_id"
    SHRIMP_PARTNER_FACILITY ||--o{ SHRIMP_PARTNER_POND : "facility_id"
    SHRIMP_PARTNER_FACILITY ||--o{ SHRIMP_PRODUCT : "origin_facility_id"
    SHRIMP_PARTNER_POND ||--o{ SHRIMP_LOT_ALLOCATION : "pond_id"
    SHRIMP_PARTNER_POND ||--o{ SHRIMP_PRODUCT : "origin_pond_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_CHARGE : "product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_CHECK_REQUEST : "product_id, result_product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_LOT_ALLOCATION : "product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_PRODUCT_CERTIFICATE_LINE : "product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_PRODUCT_EVOLUTION : "product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_STOCK_LOT : "product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_STOCK_MOVE : "product_id"
    SHRIMP_PRODUCT ||--o{ SHRIMP_TRANSACTION : "product_id, result_product_id"
    SHRIMP_SIZE_GRADE ||--o{ SHRIMP_PRODUCT : "size_grade_id"
    SHRIMP_SPECIES ||--o{ SHRIMP_GENETICS_LINE : "species_id"
    SHRIMP_SPECIES ||--o{ SHRIMP_PRODUCT : "species_id"
    SHRIMP_STAGE ||--o{ SHRIMP_PRODUCT : "stage_id"
    SHRIMP_STAGE ||--o{ SHRIMP_PRODUCT_EVOLUTION : "stage_id"
    SHRIMP_STOCK_LOT ||--o{ SHRIMP_CHECK_REQUEST : "source_lot_id"
    SHRIMP_STOCK_LOT ||--o{ SHRIMP_LOT_ALLOCATION : "stock_lot_id"
    SHRIMP_STOCK_MOVE ||--o{ SHRIMP_STOCK_LOT : "origin_move_id"
    SHRIMP_STOCK_MOVE ||--o{ SHRIMP_STOCK_MOVE : "parent_move_id"
    SHRIMP_TRANSACTION ||--o{ SHRIMP_CHARGE : "transaction_id"
    SHRIMP_TRANSACTION ||--o{ SHRIMP_CHECK_REQUEST : "transaction_id"
    SHRIMP_TRANSACTION ||--o{ SHRIMP_REVIEW : "transaction_id"
    SHRIMP_TRANSACTION ||--o{ SHRIMP_STOCK_MOVE : "transaction_id"
    SHRIMP_UOM ||--o{ SHRIMP_CHARGE : "uom_id"
    SHRIMP_UOM ||--o{ SHRIMP_CHECK_REQUEST : "uom_id"
    SHRIMP_UOM ||--o{ SHRIMP_PRODUCT : "uom_id"
    SHRIMP_UOM ||--o{ SHRIMP_STOCK_LOT : "uom_id"
    SHRIMP_USER_CERTIFICATE_LINE ||--o{ SHRIMP_PRODUCT_CERTIFICATE_LINE : "source_user_certificate_line_id"
